--- a/index.html
+++ b/index.html
@@ -5,10 +5,16 @@
             background-color: black;
             color: white;
             font-family: Arial, sans-serif;
-            padding: 20px; /* Add padding for better spacing */
+            padding: 20px;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+            margin: 0;
         }
         h2 {
-            color: orange; /* Change color of h2 headings */
+            color: orange;
         }
     </style>
 </head>
@@ -34,4 +40,5 @@
     </footer>
 </body>
 </html>
+
 
