--- a/index.html
+++ b/index.html
@@ -8,13 +8,21 @@
             padding: 20px;
             display: flex;
             flex-direction: column;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
+            justify-content: space-between;
+            min-height: 100vh;
             margin: 0;
         }
         h2 {
             color: orange;
+        }
+        main {
+            flex: 1;
+        }
+        footer {
+            background-color: black;
+            color: white;
+            text-align: center;
+            padding: 10px;
         }
     </style>
 </head>
@@ -40,5 +48,6 @@
     </footer>
 </body>
 </html>
+
 
 
