--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
+<!DOCTYPE html>
 <html>
 <head>
     <style>
         body {
-            background-color: black;
-            color: white;
+            background-color: #333; /* Dark background color */
+            color: #fff; /* Light text color */
             font-family: Arial, sans-serif;
             padding: 20px;
             display: flex;
@@ -12,17 +13,33 @@
             min-height: 100vh;
             margin: 0;
         }
+        h1 {
+            text-align: center; /* Center align the header */
+            color: orange; /* Orange color for header */
+            margin-top: 20px; /* Add space above the header */
+        }
         h2 {
-            color: orange;
+            color: #f39c12; /* Custom color for h2 */
         }
         main {
             flex: 1;
+            padding: 20px; /* Add padding inside main */
         }
         footer {
-            background-color: black;
-            color: white;
+            background-color: #222; /* Dark footer background */
+            color: #bbb; /* Light text color for footer */
             text-align: center;
             padding: 10px;
+        }
+        section {
+            margin-bottom: 20px; /* Add space between sections */
+        }
+        a {
+            color: #3498db; /* Blue color for links */
+            text-decoration: none; /* Remove underline from links */
+        }
+        a:hover {
+            text-decoration: underline; /* Underline on hover */
         }
     </style>
 </head>
@@ -48,4 +65,5 @@
     </footer>
 </body>
 </html>
+
 
