--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <style>
         body {
-            background: linear-gradient(135deg, #3498db, #9b59b6); /* Gradient background color */
+            background: linear-gradient(135deg, #03002f, #000000); /* Gradient background color */
             color: #fff; /* Light text color */
             font-family: Arial, sans-serif;
             padding: 20px;
