--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 
         <section>
             <h2>Social's</h2>
-            <p>Join my discord server: <a href="https://discord.gg/yA5baCyuyt">Discord</a></p>
+            <p>Join my discord server: <a href="https://discord.gg/yA5baCyuyt" target="_blank">Discord</a></p>
         </section>
     </main>
 
