--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <style>
         body {
-            background: linear-gradient(135deg, #03002f, #000000; /* Gradient background color */
+            background: linear-gradient(135deg, #03002f, #000000); /* Gradient background color */
             color: #fff; /* Light text color */
             font-family: Arial, sans-serif;
             padding: 20px;
@@ -57,7 +57,7 @@
         <section>
             <h2>Social's</h2>
             <p>Join my discord server: <a href="https://discord.gg/yA5baCyuyt" target="_blank">Discord</a></p>
-            <img src="https://cdn.discordapp.com/attachments/1127651827337396378/1243871349034713178/US8Wbuu.png?ex=66530cf7&is=6651bb77&hm=38710067f40f2c132608d0c8f5ae84bd0c51e5738505e00ff367370acdcb5e3b&" alt="Sample Image" style="display: block; margin: 0 auto; max-width: 100%;" /> <!-- Image tag -->
+            <img src="https://cdn.discordapp.com/attachments/1127651827337396378/1243871349034713178/US8Wbuu.png?ex=66530cf7&is=6651bb77&hm=38710067f40f2c132608d0c8f5ae84bd0c51e5738505e00ff367370acdcb5e3b" alt="Sample Image" style="display: block; margin: 0 auto; max-width: 100%;" /> <!-- Image tag -->
         </section>
     </main>
 
@@ -66,6 +66,7 @@
     </footer>
 </body>
 </html>
+
 
 
 
