--- a/index.html
+++ b/index.html
@@ -57,6 +57,10 @@
         <section>
             <h2>Social's</h2>
             <p>Join my discord server: <a href="https://discord.gg/yA5baCyuyt" target="_blank">Discord</a></p>
+        </section>
+
+        <section>
+            <h2>Latest Render's</h2>
             <img src="https://cdn.discordapp.com/attachments/1127651827337396378/1243871349034713178/US8Wbuu.png?ex=66530cf7&is=6651bb77&hm=38710067f40f2c132608d0c8f5ae84bd0c51e5738505e00ff367370acdcb5e3b" alt="Sample Image" style="display: block; margin: 0 auto; max-width: 100%;" /> <!-- Image tag -->
         </section>
     </main>
