--- a/index.html
+++ b/index.html
@@ -2,46 +2,32 @@
 <html>
 <head>
     <style>
-        body {
-            background: linear-gradient(135deg, #03002f, #000000); /* Gradient background color */
-            color: #fff; /* Light text color */
-            font-family: Arial, sans-serif;
-            padding: 20px;
-            display: flex;
-            flex-direction: column;
-            justify-content: space-between;
-            min-height: 100vh;
-            margin: 0;
-        }
-        h1 {
-            text-align: center; /* Center align the header */
-            color: orange; /* Orange color for header */
-            margin-top: 20px; /* Add space above the header */
-        }
-        h2 {
-            color: #f39c12; /* Custom color for h2 */
-        }
-        main {
-            flex: 1;
-            padding: 20px; /* Add padding inside main */
-        }
-        footer {
-            background-color: #222; /* Dark footer background */
-            color: #bbb; /* Light text color for footer */
-            text-align: center;
-            padding: 10px;
-        }
-        section {
-            margin-bottom: 20px; /* Add space between sections */
-        }
-        a {
-            color: #3498db; /* Blue color for links */
-            text-decoration: none; /* Remove underline from links */
-        }
-        a:hover {
-            text-decoration: underline; /* Underline on hover */
-        }
+        /* CSS styles remain the same */
     </style>
+    <script>
+        const slideshowImages = [
+            "https://cdn.discordapp.com/attachments/1127651827337396378/1243871349034713178/US8Wbuu.png?ex=66530cf7&is=6651bb77&hm=38710067f40f2c132608d0c8f5ae84bd0c51e5738505e00ff367370acdcb5e3b&",
+            "https://cdn.discordapp.com/attachments/1127651827337396378/1243890878611849256/ijU8t8V.png?ex=66531f27&is=6651cda7&hm=e66972fc339279c714c87ea62598852428ea634e5f5230a6b37e316d9433b12e&",
+            "https://cdn.discordapp.com/attachments/1127651827337396378/1243891318900523050/WJVkDq7.png?ex=66531f90&is=6651ce10&hm=f1f4a8d043f50f1251daec2f64cccd96b2e9e9877dd7019edaf7f56dcf6910f3&"
+            // Add more image URLs as needed
+        ];
+
+        let currentSlide = 0;
+
+        function startSlideshow() {
+            setInterval(() => {
+                showSlide();
+                currentSlide = (currentSlide + 1) % slideshowImages.length;
+            }, 3000); // Change slide every 3 seconds (3000 milliseconds)
+        }
+
+        function showSlide() {
+            document.getElementById('slideshowImage').src = slideshowImages[currentSlide];
+        }
+
+        // Start the slideshow when the page loads
+        window.onload = startSlideshow;
+    </script>
 </head>
 <body>
     <header>
@@ -61,7 +47,7 @@
 
         <section>
             <h2>Latest Render's</h2>
-            <img src="https://cdn.discordapp.com/attachments/1127651827337396378/1243871349034713178/US8Wbuu.png?ex=66530cf7&is=6651bb77&hm=38710067f40f2c132608d0c8f5ae84bd0c51e5738505e00ff367370acdcb5e3b" alt="Sample Image" style="display: block; margin: 0 auto; max-width: 100%;" /> <!-- Image tag -->
+            <img id="slideshowImage" src="" alt="Slideshow Image" style="display: block; margin: 0 auto; max-width: 100%;" /> <!-- Image tag for slideshow -->
         </section>
     </main>
 
@@ -70,6 +56,7 @@
     </footer>
 </body>
 </html>
+
 
 
 
