--- a/index.html
+++ b/index.html
@@ -2,8 +2,47 @@
 <html>
 <head>
     <style>
-        /* CSS styles remain the same */
+        body {
+            background: linear-gradient(135deg, #03002f, #000000); /* Gradient background color */
+            color: #fff; /* Light text color */
+            font-family: Arial, sans-serif;
+            padding: 20px;
+            display: flex;
+            flex-direction: column;
+            justify-content: space-between;
+            min-height: 100vh;
+            margin: 0;
+        }
+        h1 {
+            text-align: center; /* Center align the header */
+            color: orange; /* Orange color for header */
+            margin-top: 20px; /* Add space above the header */
+        }
+        h2 {
+            color: #f39c12; /* Custom color for h2 */
+        }
+        main {
+            flex: 1;
+            padding: 20px; /* Add padding inside main */
+        }
+        footer {
+            background-color: #222; /* Dark footer background */
+            color: #bbb; /* Light text color for footer */
+            text-align: center;
+            padding: 10px;
+        }
+        section {
+            margin-bottom: 20px; /* Add space between sections */
+        }
+        a {
+            color: #3498db; /* Blue color for links */
+            text-decoration: none; /* Remove underline from links */
+        }
+        a:hover {
+            text-decoration: underline; /* Underline on hover */
+        }
     </style>
+    
     <script>
         const slideshowImages = [
             "https://cdn.discordapp.com/attachments/1127651827337396378/1243871349034713178/US8Wbuu.png?ex=66530cf7&is=6651bb77&hm=38710067f40f2c132608d0c8f5ae84bd0c51e5738505e00ff367370acdcb5e3b&",
