--- a/index.html
+++ b/index.html
@@ -41,6 +41,11 @@
         a:hover {
             text-decoration: underline; /* Underline on hover */
         }
+        #slideshowImage {
+            transition: opacity 1s ease; /* Add transition effect to the image */
+        }
+
+        
     </style>
     
     <script>
