--- a/index.html
+++ b/index.html
@@ -66,7 +66,12 @@
         }
 
         function showSlide() {
-            document.getElementById('slideshowImage').src = slideshowImages[currentSlide];
+            const image = document.getElementById('slideshowImage');
+            image.style.opacity = 0; // Fade out the image
+            setTimeout(() => {
+                image.src = slideshowImages[currentSlide];
+                image.style.opacity = 1; // Fade in the new image
+            }, 500); // Delay before showing the new image (0.5 seconds)
         }
 
         // Start the slideshow when the page loads
