--- a/index.html
+++ b/index.html
@@ -91,11 +91,12 @@
 
         <section>
             <h2>Social's</h2>
-            <p>Join my discord server: <a href="https://discord.gg/yA5baCyuyt" target="_blank">Discord</a></p>
+            <p>Join my 3D discord server! : <a href="https://discord.gg/yA5baCyuyt" target="_blank">Discord</a></p>
         </section>
 
         <section>
             <h2>Latest Render's</h2>
+            <p> Note: These renders are just place holder for now (not final renders)
             <img id="slideshowImage" src="" alt="Slideshow Image" style="display: block; margin: 0 auto; max-width: 100%;" /> <!-- Image tag for slideshow -->
         </section>
     </main>
