--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
     <header>
         <h1>Hey, I'm Deathshot</h1>
         <button class="gallery-button" onclick="goToGallery()">
-        <img src="https://png.pngtree.com/png-clipart/20190614/original/pngtree-vector-gallery-icon-png-image_3781980.jpg" alt="Gallery Icon" width="64" height="64">
+        <img src="https://cdn.discordapp.com/attachments/1127651827337396378/1243914545102061619/z3CfN3g.png?ex=66533532&is=6651e3b2&hm=ac130236729b6c81d6c78688bce61485cb735aaacd33be705e254a609ca0f087&" alt="Gallery Icon" width="64" height="64">
     </button>
     </header>
 
