--- a/gallery.html
+++ b/gallery.html
@@ -69,7 +69,7 @@
     <main>
         <section>
             <h2>Test</h2>
-            <img src="path_to_your_image.jpg" alt="Description of the image">
+            <img src="https://cdn.discordapp.com/attachments/1127651827337396378/1243891318900523050/WJVkDq7.png?ex=66531f90&is=6651ce10&hm=f1f4a8d043f50f1251daec2f64cccd96b2e9e9877dd7019edaf7f56dcf6910f3&" alt="Description of the image">
         </section>
     </main>
 
