--- a/gallery.html
+++ b/gallery.html
@@ -24,6 +24,11 @@
             flex: 1;
             padding: 20px; /* Add padding inside main */
         }
+	img {
+            max-width: 100%; /* Make image responsive */
+            height: auto; /* Maintain aspect ratio */
+        }
+	
         footer {
             background-color: #222; /* Dark footer background */
             color: #bbb; /* Light text color for footer */
