--- a/gallery.html
+++ b/gallery.html
@@ -73,8 +73,13 @@
 
     <main>
         <section>
-            <h2>Test</h2>
-            <img src="https://cdn.discordapp.com/attachments/1127651827337396378/1243891318900523050/WJVkDq7.png?ex=66531f90&is=6651ce10&hm=f1f4a8d043f50f1251daec2f64cccd96b2e9e9877dd7019edaf7f56dcf6910f3&" alt="Description of the image">
+            <h2>4090 Matrix_pose 1~Green</h2>
+            <img src="https://cdn.discordapp.com/attachments/1127651827337396378/1243948186855538808/qLp9drO.png?ex=66535487&is=66520307&hm=9e58c9be288ad96b6c61539ac12b52c80c2acfb9f90a060e3c54fca08d7d2e36&" alt="Description of the image">
+        </section>
+
+	<section>
+            <h2>4090 Matrix_pose 2~babyblue</h2>
+            <img src="https://cdn.discordapp.com/attachments/1127651827337396378/1243948212168167454/nTMj51P.png?ex=6653548d&is=6652030d&hm=b6c5d719af2e439ef311766b63ec59f6c026a4d078ce78a11f3105565f2ee22c&" alt="Description of the image">
         </section>
     </main>
 
