--- a/gallery.html
+++ b/gallery.html
@@ -81,6 +81,14 @@
             <h2>4090 Matrix_pose 2~babyblue</h2>
             <img src="https://cdn.discordapp.com/attachments/1127651827337396378/1243948212168167454/nTMj51P.png?ex=6653548d&is=6652030d&hm=b6c5d719af2e439ef311766b63ec59f6c026a4d078ce78a11f3105565f2ee22c&" alt="Description of the image">
         </section>
+	<section>
+            <h2>Butterfly Knife 1~Blue</h2>
+            <img src="https://cdn.discordapp.com/attachments/1127651827337396378/1243967217331212399/XPp41VE.png?ex=66536640&is=665214c0&hm=797ec8e43a039ca8922187651a1cc83fc546b797efeabb3f9d5f5bc43ea268f1&" alt="Description of the image">
+        </section>
+	<section>
+            <h2>RTX A6000_pose 1</h2>
+            <img src="https://cdn.discordapp.com/attachments/1127651827337396378/1243968030363619410/gT7nPoP.png?ex=66536702&is=66521582&hm=684e8de0fc351e2b4ecab68c54a4dad7a6064beaa04b23be20a5c511ade1c3a3&" alt="Description of the image">
+        </section>
     </main>
 
     <footer>
