--- a/index.html
+++ b/index.html
@@ -59,6 +59,13 @@
             height: 64px; /* Set height to 64 pixels */
         }
 
+        .icon {
+            width: 24px; /* Set width of the icon */
+            height: 24px; /* Set height of the icon */
+            background: url('https://cdn.discordapp.com/attachments/1127651827337396378/1244231459942830190/kvylOXu.png?ex=66545c58&is=66530ad8&hm=59e647d32d7e03cb77254d5fea99a44ef2dc8087ba2354ab5c41ae02c4915a0e&') no-repeat; /* Add your icon image */
+            display: inline-block; /* Make the icon display inline */
+        }
+
         
     </style>
     
@@ -104,6 +111,7 @@
         <button class="gallery-button" onclick="goToGallery()">
         <img src="https://cdn.discordapp.com/attachments/1127651827337396378/1243916520405598238/wR2XCUP.png?ex=66533709&is=6651e589&hm=d9e1a37f961a09a8088430310272156c2a2e9de323a7dc1c4d075557c5964375&" alt="Gallery Icon">
     </button>
+        <a href="#" class="https://cdn.discordapp.com/attachments/1127651827337396378/1244231459942830190/kvylOXu.png?ex=66545c58&is=66530ad8&hm=59e647d32d7e03cb77254d5fea99a44ef2dc8087ba2354ab5c41ae02c4915a0e&"></a> <!-- Add the icon as a link -->
     </header>
 
     <main>
