--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
         <button class="gallery-button" onclick="goToGallery()">
         <img src="https://cdn.discordapp.com/attachments/1127651827337396378/1243916520405598238/wR2XCUP.png?ex=66533709&is=6651e589&hm=d9e1a37f961a09a8088430310272156c2a2e9de323a7dc1c4d075557c5964375&" alt="Gallery Icon">
     </button>
-        <a href="#" class="https://cdn.discordapp.com/attachments/1127651827337396378/1244231459942830190/kvylOXu.png?ex=66545c58&is=66530ad8&hm=59e647d32d7e03cb77254d5fea99a44ef2dc8087ba2354ab5c41ae02c4915a0e&"></a> <!-- Add the icon as a link -->
+        <a href="#" class="icon"></a> <!-- Add the icon as a link -->
     </header>
 
     <main>
