--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
 
     <footer>
         <p>&copy; 2024 Deathshot. All rights reserved.</p>
-        <p>For Awesome Modesl/Textures/Hdri: <a href="https://www.poliigon.com" target="_blank">Poliigon</a> (Not Affiliated I just love poliigon)</p>
+        <p>For Awesome Models/Textures/Hdri: <a href="https://www.poliigon.com" target="_blank">Poliigon</a> (Not Affiliated I just love poliigon)</p>
     </footer>
 </body>
 </html>
