--- a/index.html
+++ b/index.html
@@ -40,6 +40,10 @@
         a:hover {
             text-decoration: underline; /* Underline on hover */
         }
+        #slideshowImage {
+        transition: opacity 0.5s ease-in-out; /* Smoothly transition opacity */
+        }
+
         /* Style for the button */
         .gallery-button {
             position: fixed;
