--- a/gallery.html
+++ b/gallery.html
@@ -89,6 +89,14 @@
             <h2>RTX A6000_pose 1</h2>
             <img src="https://cdn.discordapp.com/attachments/1127651827337396378/1243968030363619410/gT7nPoP.png?ex=66536702&is=66521582&hm=684e8de0fc351e2b4ecab68c54a4dad7a6064beaa04b23be20a5c511ade1c3a3&" alt="Description of the image">
         </section>
+	<section>
+            <h2>Bloom n Gloom~purple</h2>
+            <img src="https://cdn.discordapp.com/attachments/1127651827337396378/1244242953850060820/ytxdXAG.png?ex=6654670d&is=6653158d&hm=d07a4d943d093a4e7f532c10645418eba1c854fb274b7d6ea064fa963fd103f4&" alt="Description of the image">
+        </section>
+	<section>
+            <h2>ICBM_pose 1</h2>
+            <img src="https://cdn.discordapp.com/attachments/1127651827337396378/1244242940545728624/s63rtGb.png?ex=66546709&is=66531589&hm=9d5a543a3cb8a05cfb5481476a05fbb718e5fadc51464f46724c6aac0e902bf3&" alt="Description of the image">
+        </section>
     </main>
 
     <footer>
