--- a/index.html
+++ b/index.html
@@ -58,6 +58,15 @@
             width: 64px; /* Set width to 64 pixels */
             height: 64px; /* Set height to 64 pixels */
         }
+        .footer {
+            position: relative;
+        }
+
+        .footer-image {
+            position: absolute;
+            bottom: 0;
+            right: 0;
+        }    
 
 
     </style>
@@ -129,6 +138,7 @@
     <footer>
         <p>&copy; 2024 Deathshot. All rights reserved.</p>
         <p>For Awesome Models/Textures/Hdri: <a href="https://www.poliigon.com" target="_blank">Poliigon</a> (Not Affiliated I just love poliigon)</p>
+        <img src="https://cdn.discordapp.com/attachments/1127651827337396378/1244231459942830190/kvylOXu.png?ex=66545c58&is=66530ad8&hm=59e647d32d7e03cb77254d5fea99a44ef2dc8087ba2354ab5c41ae02c4915a0e&" alt="Description of your image" class="footer-image">
     </footer>
 </body>
 </html>
