--- a/index.html
+++ b/index.html
@@ -58,14 +58,12 @@
             width: 64px; /* Set width to 64 pixels */
             height: 64px; /* Set height to 64 pixels */
         }
-        .footer {
-            position: relative;
-        }
-
         .footer-image {
             position: absolute;
             bottom: 0;
             right: 0;
+            width: 64px;
+            height: 64px;
         }    
 
 
