--- a/index.html
+++ b/index.html
@@ -58,13 +58,19 @@
             width: 64px; /* Set width to 64 pixels */
             height: 64px; /* Set height to 64 pixels */
         }
+        footer {
+        position: relative;
+        padding: 10px; /* Add padding to create space around the image */
+        }
+
         .footer-image {
             position: absolute;
-            bottom: 0;
-            right: 0;
-            width: 64px;
-            height: 64px;
-        }    
+            bottom: 10px; /* Adjust the bottom position as needed */
+            right: 10px; /* Adjust the right position as needed */
+            width: 64px; /* Set width to 64 pixels */
+            height: 64px; /* Set height to 64 pixels */
+        }
+    
 
 
     </style>
