--- a/gallery.html
+++ b/gallery.html
@@ -67,7 +67,7 @@
     <header>
         <h1>Gallery</h1>
 		<button class="gallery-button" onclick="goToGallery()">
-        <img src="https://cdn.discordapp.com/attachments/1127651827337396378/1243924456053669968/WDMEbou.png?ex=66533e6d&is=6651eced&hm=8419a33954484849634c2028792e34fb477d9db94de1c6945dde62b7cc337442&" alt="Gallery Icon">
+        <img src="https://i.ibb.co/Bt9M7dc/5bbc427426f04-thumbnail-removebg-preview.png" alt="Gallery Icon">
     </button>
     </header>
 
