--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
     <header>
         <h1>Hey, I'm Deathshot</h1>
         <button class="gallery-button" onclick="goToGallery()">
-        <img src="https://cdn.discordapp.com/attachments/1127651827337396378/1243916520405598238/wR2XCUP.png?ex=66533709&is=6651e589&hm=d9e1a37f961a09a8088430310272156c2a2e9de323a7dc1c4d075557c5964375&" alt="Gallery Icon">
+        <img src="https://i.ibb.co/HHTW82q/pngtree-vector-gallery-icon-png-image-3989549-removebg-preview.png" alt="Gallery Icon">
     </button>
     </header>
 
