--- a/index.html
+++ b/index.html
@@ -77,9 +77,9 @@
     
     <script>
                 const slideshowImages = [
-            "https://cdn.discordapp.com/attachments/1127651827337396378/1243871349034713178/US8Wbuu.png?ex=66530cf7&is=6651bb77&hm=38710067f40f2c132608d0c8f5ae84bd0c51e5738505e00ff367370acdcb5e3b&",
-            "https://cdn.discordapp.com/attachments/1127651827337396378/1243890878611849256/ijU8t8V.png?ex=66531f27&is=6651cda7&hm=e66972fc339279c714c87ea62598852428ea634e5f5230a6b37e316d9433b12e&",
-            "https://cdn.discordapp.com/attachments/1127651827337396378/1243948212168167454/nTMj51P.png?ex=6653548d&is=6652030d&hm=b6c5d719af2e439ef311766b63ec59f6c026a4d078ce78a11f3105565f2ee22c&"
+            "https://i.ibb.co/bLRHNyf/Titan-V-PCB-2.png",
+            "https://i.ibb.co/7ztHL6K/Butterfly-Knife-1.png",
+            "https://i.ibb.co/k5jf8vC/4090-Matrix-neon-1.png"
             // Add more image URLs as needed
         ];
 
@@ -142,7 +142,7 @@
     <footer>
         <p>&copy; 2024 Deathshot. All rights reserved.</p>
         <p>For Awesome Models/Textures/Hdri: <a href="https://www.poliigon.com" target="_blank">Poliigon</a> (Not Affiliated I just love poliigon)</p>
-        <img src="https://cdn.discordapp.com/attachments/1127651827337396378/1244231459942830190/kvylOXu.png?ex=66545c58&is=66530ad8&hm=59e647d32d7e03cb77254d5fea99a44ef2dc8087ba2354ab5c41ae02c4915a0e&" alt="Description of your image" class="footer-image">
+        <img src="https://i.ibb.co/J7R47Sd/logo.png" alt="image" class="footer-image">
     </footer>
 </body>
 </html>
