--- a/gallery.html
+++ b/gallery.html
@@ -74,28 +74,32 @@
     <main>
         <section>
             <h2>4090 Matrix_pose 1~Green</h2>
-            <img src="https://cdn.discordapp.com/attachments/1127651827337396378/1243948186855538808/qLp9drO.png?ex=66535487&is=66520307&hm=9e58c9be288ad96b6c61539ac12b52c80c2acfb9f90a060e3c54fca08d7d2e36&" alt="Description of the image">
+            <img src="https://i.ibb.co/71W0j0r/4090-Matrix-green-1.png" alt="image">
         </section>
 
 	<section>
             <h2>4090 Matrix_pose 2~babyblue</h2>
-            <img src="https://cdn.discordapp.com/attachments/1127651827337396378/1243948212168167454/nTMj51P.png?ex=6653548d&is=6652030d&hm=b6c5d719af2e439ef311766b63ec59f6c026a4d078ce78a11f3105565f2ee22c&" alt="Description of the image">
+            <img src="" alt="Description of the image">
         </section>
 	<section>
-            <h2>Butterfly Knife 1~Blue</h2>
-            <img src="https://cdn.discordapp.com/attachments/1127651827337396378/1243967217331212399/XPp41VE.png?ex=66536640&is=665214c0&hm=797ec8e43a039ca8922187651a1cc83fc546b797efeabb3f9d5f5bc43ea268f1&" alt="Description of the image">
+            <h2>Butterfly Knife 1~Silver</h2>
+            <img src="https://i.ibb.co/SKTJpnS/Butterfly-Knife-Silver-1.png" alt="image">
         </section>
 	<section>
             <h2>RTX A6000_pose 1</h2>
-            <img src="https://cdn.discordapp.com/attachments/1127651827337396378/1243968030363619410/gT7nPoP.png?ex=66536702&is=66521582&hm=684e8de0fc351e2b4ecab68c54a4dad7a6064beaa04b23be20a5c511ade1c3a3&" alt="Description of the image">
+            <img src="https://i.ibb.co/0f5m2dL/RTX-A6000.png" alt="image">
         </section>
 	<section>
             <h2>Bloom n Gloom~purple</h2>
-            <img src="https://cdn.discordapp.com/attachments/1127651827337396378/1244242953850060820/ytxdXAG.png?ex=6654670d&is=6653158d&hm=d07a4d943d093a4e7f532c10645418eba1c854fb274b7d6ea064fa963fd103f4&" alt="Description of the image">
+            <img src="https://i.ibb.co/5rPY2vb/purple-love.png" alt="image">
         </section>
 	<section>
             <h2>ICBM_pose 1</h2>
-            <img src="https://cdn.discordapp.com/attachments/1127651827337396378/1244242940545728624/s63rtGb.png?ex=66546709&is=66531589&hm=9d5a543a3cb8a05cfb5481476a05fbb718e5fadc51464f46724c6aac0e902bf3&" alt="Description of the image">
+            <img src="https://i.ibb.co/D53pNm3/ICBM-5.png" alt="image">
+        </section>
+	<section>
+            <h2>RTX 4090 FE</h2>
+            <img src="https://i.ibb.co/zJdFYtb/Rtx-4090-FE.png" alt="image">
         </section>
     </main>
 
