--- a/gallery.html
+++ b/gallery.html
@@ -74,27 +74,27 @@
     <main>
         <section>
             <h2>4090 Matrix_pose 1~Green</h2>
-            <img src="https://i.ibb.co/71W0j0r/4090-Matrix-green-1.png" alt="image">
+            <img src="https://i.ibb.co/71W0j0r/4090-Matrix-green-1.png" alt="image" loading="lazy">
         </section>
 	<section>
             <h2>Butterfly Knife 1~Silver</h2>
-            <img src="https://i.ibb.co/SKTJpnS/Butterfly-Knife-Silver-1.png" alt="image">
+            <img src="https://i.ibb.co/SKTJpnS/Butterfly-Knife-Silver-1.png" alt="image" loading="lazy">
         </section>
 	<section>
             <h2>RTX A6000_pose 1</h2>
-            <img src="https://i.ibb.co/0f5m2dL/RTX-A6000.png" alt="image">
+            <img src="https://i.ibb.co/0f5m2dL/RTX-A6000.png" alt="image" loading="lazy">
         </section>
 	<section>
             <h2>Bloom n Gloom~purple</h2>
-            <img src="https://i.ibb.co/5rPY2vb/purple-love.png" alt="image">
+            <img src="https://i.ibb.co/5rPY2vb/purple-love.png" alt="image" loading="lazy">
         </section>
 	<section>
             <h2>ICBM_pose 1</h2>
-            <img src="https://i.ibb.co/D53pNm3/ICBM-5.png" alt="image">
+            <img src="https://i.ibb.co/D53pNm3/ICBM-5.png" alt="image" loading="lazy">
         </section>
 	<section>
             <h2>RTX 4090 FE</h2>
-            <img src="https://i.ibb.co/zJdFYtb/Rtx-4090-FE.png" alt="image">
+            <img src="https://i.ibb.co/zJdFYtb/Rtx-4090-FE.png" alt="image" loading="lazy">
         </section>
     </main>
 
