--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
 
     <footer>
         <p>&copy; 2024 Deathshot. All rights reserved.</p>
-        <p>For Awesome Models/Textures/Hdri: <a href="https://www.poliigon.com" target="_blank">Poliigon</a> (Not Affiliated I just love poliigon)</p>
+        <p>Make Better Renders Faster. <a href="https://www.poliigon.com" target="_blank">Poliigon</a> (Not Affiliated I just love poliigon)</p>
         <img src="https://i.ibb.co/J7R47Sd/logo.png" alt="image" class="footer-image">
     </footer>
 </body>
